# chatgpt-web-provider

./: .env.example  .gitignore  README.md  pyproject.toml
caddy/: Caddyfile.example
postman/: README.md  chatgpt-web-provider.postman_collection.json  chatgpt-web-provider.template.postman_environment.json
src/chatgpt_web_provider/: __init__.py  app.py  backends.py  browser_setup.py  config.py  models.py  security.py
systemd/: chatgpt-web-provider.service
tests/: test_api_contract.py  test_security.py
